--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
   },
   "devDependencies": {},
   "scripts": {
-    "build": "echo \"Error: no test specified\" && exit 1"
+    "build": "echo \"Error: no test specified\" && exit 1",
+    "start": "node ./netlify/functions/express/index.js"
   },
   "repository": {
     "type": "git",
