--- a/netlify.toml
+++ b/netlify.toml
@@ -1,7 +1,7 @@
 [functions]
   external_node_modules = ["express"]
   node_bundler = "esbuild"
-  directory = "./netlify/functions/"
+  directory = "./.netlify/functions/"
 [[redirects]]
   force = true
   from = "/"
