--- a/package.json
+++ b/package.json
@@ -4,11 +4,16 @@
   "description": "",
   "main": "index.js",
   "dependencies": {
+    "cookie-parser": "^1.4.6",
     "express": "^4.18.2",
+    "jsonwebtoken": "^9.0.1",
     "morgan": "^1.10.0",
+    "passport": "^0.6.0",
+    "passport-github2": "^0.1.12",
+    "passport-jwt": "^4.0.1",
+    "serverless-http": "^2.7.0",
     "uuid": "^9.0.0"
   },
-  "devDependencies": {},
   "scripts": {
     "build": "echo \"Error: no test specified\" && exit 1",
     "start": "node ./netlify/functions/express/index.js"
