--- a/netlify.toml
+++ b/netlify.toml
@@ -7,5 +7,11 @@
   command = "echo building"
 [dev]
   framework = "#custom"
-  command = "echo dev"
+  command = "sleep infinity"
   targetPort = 8888
+
+[[redirects]]
+  force = true
+  from = "/*"
+  status = 200
+  to = "/.netlify/functions/api/:splat"
