--- a/netlify.toml
+++ b/netlify.toml
@@ -14,4 +14,4 @@
   force = true
   from = "/api/*"
   status = 200
-  to = "/.netlify/functions/api/:splat"
+  to = "/.netlify/functions/express/:splat"
